# EarTraining

./: .gitignore  CMakeLists.txt  Makefile  README.md  main  main.cpp
src/: button.cpp  button.hpp  enums.hpp  guessingPage.cpp  guessingPage.hpp  main.cpp  page.hpp  resources.hpp  settingsPage.cpp  settingsPage.hpp  sources.cmake  standardButton.hpp  toggleButton.cpp  toggleButton.hpp  tones.hpp
